--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,8 @@ body {
         height: 80px;
         margin: 0px auto;
         float: left;
-        position: relative; }
+        position: relative;
+        background-color: peru; }
         body header article ul::after {
           position: absolute;
           content: "";
