--- a/css/style.scss
+++ b/css/style.scss
@@ -103,6 +103,7 @@ body {
             margin: 0px auto;
             float: left;
             position: relative;
+            background-color: peru;
             &::after{
                 position: absolute;
                 content: "";
