--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,9 @@ html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0px auto; }
+  @media all and (-webkit-min-device-pixel-ratio: 0) {
+    html {
+      font-size: 14px; } }
 
 a:link {
   text-decoration: none; }
