--- a/css/style.scss
+++ b/css/style.scss
@@ -113,6 +113,7 @@ body {
                 background-size: cover;
                 left: -57px;
                 z-index: -5;
+                margin-top: 50px;
             }
             li{
                 display: inline-block;
@@ -181,9 +182,6 @@ body {
                 font-size: 16px;
                 outline: none;
                 cursor: pointer;
-                @media all and (-webkit-min-device-pixel-ratio:0){
-                    font-size:14px;
-                }
                 /*for IE*/
                 @media screen and (-ms-high-contrast: active),(-ms-high-contrast: none){
                     font-size: 14px;
