--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,8 @@ body {
         height: 80px;
         margin: 0px auto;
         float: left;
-        position: relative; }
+        position: relative;
+        background-color: pink; }
         body header article ul::after {
           position: absolute;
           content: "";
@@ -123,7 +124,7 @@ body {
           @media not all and (min-resolution: 0.001dpcm) {
             @supports (-webkit-appearance: none) {
               body header article ul::after {
-                margin-top: -40px; } } }
+                margin-top: -140px; } } }
         body header article ul li {
           display: inline-block;
           width: 76px;
