--- a/css/style.scss
+++ b/css/style.scss
@@ -103,6 +103,7 @@ body {
             margin: 0px auto;
             float: left;
             position: relative;
+            background-color: pink;
             &::after{
                 position: absolute;
                 content: "";
@@ -113,7 +114,7 @@ body {
                 left: -57px;
                 z-index: -5;
                 @media not all and (min-resolution:.001dpcm){ @supports (-webkit-appearance:none){
-                    margin-top: -40px;
+                    margin-top: -140px;
                 }}
             }
             li{
