--- a/css/style.scss
+++ b/css/style.scss
@@ -103,7 +103,7 @@ body {
             margin: 0px auto;
             float: left;
             position: relative;
-            background-color: hotpink;
+            background-color: powderblue;
             &::after{
                 position: absolute;
                 content: "";
