--- a/css/style.scss
+++ b/css/style.scss
@@ -115,6 +115,7 @@ body {
                 z-index: -5;
                 @media not all and (min-resolution:.001dpcm){ @supports (-webkit-appearance:none){
                     margin-top: -40px;
+                    background-color: powderblue;
                 }}
             }
             li{
