--- a/css/style.scss
+++ b/css/style.scss
@@ -113,7 +113,7 @@ body {
                 left: -57px;
                 z-index: -5;
                 @media not all and (min-resolution:.001dpcm){ @supports (-webkit-appearance:none){
-                    margin-top: -20px;
+                    margin-top: -30px;
                 }}
             }
             li{
@@ -185,7 +185,7 @@ body {
                 cursor: pointer;
                 /*for IE*/
                 @media not all and (min-resolution:.001dpcm){ @supports (-webkit-appearance:none){
-                    font-size: 12px;
+                    font-family: Arial, Helvetica, sans-serif;
                 }}
             }
             .bot1{
