--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ body {
           @media not all and (min-resolution: 0.001dpcm) {
             @supports (-webkit-appearance: none) {
               body header article ul::after {
-                margin-top: -30px; } } }
+                margin-top: 0px; } } }
         body header article ul li {
           display: inline-block;
           width: 76px;
@@ -190,7 +190,8 @@ body {
           @media not all and (min-resolution: 0.001dpcm) {
             @supports (-webkit-appearance: none) {
               body header article nav .bot1, body header article nav .bot2 {
-                font-family: Arial, Helvetica, sans-serif; } } }
+                font-family: "Arial, Helvetica, sans-serif";
+                font-size: 12px; } } }
         body header article nav .bot1 {
           background: -webkit-gradient(linear, left top, left bottom, from(#ff7a29), color-stop(50%, #ffa044), color-stop(50%, #ff7a29));
           background: -webkit-linear-gradient(top, #ff7a29, #ffa044 50%, #ff7a29 50%);
