--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ body {
           @media not all and (min-resolution: 0.001dpcm) {
             @supports (-webkit-appearance: none) {
               body header article nav .bot1, body header article nav .bot2 {
-                font-family: "Arial, Helvetica, sans-serif";
+                font-family: "Arial";
                 font-size: 12px; } } }
         body header article nav .bot1 {
           background: -webkit-gradient(linear, left top, left bottom, from(#ff7a29), color-stop(50%, #ffa044), color-stop(50%, #ff7a29));
