--- a/css/style.scss
+++ b/css/style.scss
@@ -185,7 +185,7 @@ body {
                 cursor: pointer;
                 /*for IE*/
                 @media not all and (min-resolution:.001dpcm){ @supports (-webkit-appearance:none){
-                    font-family: "Arial, Helvetica, sans-serif";
+                    font-family: "Arial";
                     font-size: 12px;
                 }}
             }
