--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
     margin: 0px auto; }
   body .bg {
     width: 100%;
-    height: 1000px;
+    height: 1050px;
     background: url("../images/bg.jpg") no-repeat top center;
     position: fixed;
     background-size: cover;
@@ -317,19 +317,12 @@ body {
             background-size: cover;
             color: transparent;
             opacity: 1; }
-          body main article .banner .single-item .banimg1 {
+          body main article .banner .single-item .banimg {
             margin: 0px auto;
             width: 1000px;
             height: 440px;
-            background: url("../images/banimg2.png") no-repeat center;
+            background: url("../images/banimg.png") no-repeat center;
             background-size: cover; }
-            body main article .banner .single-item .banimg1 .banlogo {
-              width: 1000px;
-              height: 200px;
-              background: url("../images/banlogo.png");
-              position: absolute;
-              top: 15px;
-              z-index: 1; }
         body main article .banner .banbot1, body main article .banner .banbot2 {
           width: 55px;
           height: 100px;
