--- a/css/style.scss
+++ b/css/style.scss
@@ -52,7 +52,7 @@ body {
     }
     .bg{
         width: 100%;
-        height: 1000px;
+        height: 1050px;
         background: url('../images/bg.jpg') no-repeat top center;
         position: fixed;
         background-size: cover;
@@ -318,20 +318,12 @@ body {
                         color: transparent;
                         opacity: 1;
                     }
-                    .banimg1{
+                    .banimg{
                         margin: 0px auto;
                         width: 1000px;
                         height: 440px;
-                        background: url('../images/banimg2.png') no-repeat center; 
+                        background: url('../images/banimg.png') no-repeat center; 
                         background-size: cover;
-                        .banlogo{
-                            width: 1000px;
-                            height: 200px;
-                            background: url('../images/banlogo.png');
-                            position: absolute;
-                            top: 15px;
-                            z-index: 1;
-                        }
                     }
                 }
                 .banbot1,.banbot2{
