--- a/css/style.scss
+++ b/css/style.scss
@@ -112,9 +112,6 @@ body {
                 background-size: cover;
                 left: -57px;
                 z-index: -5;
-                @media not all and (min-resolution:.001dpcm){ @supports (-webkit-appearance:none){
-                    margin-top: 0px;
-                }}
             }
             li{
                 display: inline-block;
@@ -184,6 +181,10 @@ body {
                 outline: none;
                 cursor: pointer;
                 /*for IE*/
+                @media screen and (-ms-high-contrast: active),(-ms-high-contrast: none){
+                    font-size: 14px;
+                    }
+                /*for Safari*/
                 @media not all and (min-resolution:.001dpcm){ @supports (-webkit-appearance:none){
                     font-size: 10px;
                 }}
