--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+button {
+  font-family: "微軟正黑體"; }
+
 /*main*/
 html {
   font-family: "微軟正黑體";
@@ -134,7 +137,7 @@ body {
             border-bottom: solid 3px transparent;
             line-height: 77px;
             color: white;
-            font-size: 16px;
+            font-size: 17px;
             margin: -20px 0px 0px 0px; }
           body header article ul li a:hover {
             -webkit-box-shadow: 0px 1px 10px #3f3f3f inset;
@@ -164,9 +167,8 @@ body {
           font-size: 14px; }
         body header article nav span {
           margin: 13px 5px 0px 5px;
-          font-size: 17px;
-          color: white;
-          font-weight: 520; }
+          font-size: 16px;
+          color: white; }
           body header article nav span:last-child {
             margin: 15px 5px 0px 5px;
             font-size: 14px; }
@@ -183,7 +185,8 @@ body {
           outline: none;
           cursor: pointer;
           /*for IE*/
-          /*for Safari*/ }
+          /*for Safari*/
+          /*for FireFox*/ }
           @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
             body header article nav .bot1, body header article nav .bot2 {
               font-size: 14px; } }
@@ -191,6 +194,9 @@ body {
             @supports (-webkit-appearance: none) {
               body header article nav .bot1, body header article nav .bot2 {
                 font-size: 10px; } } }
+          @media screen and (min--moz-device-pixel-ratio: 0) {
+            body header article nav .bot1, body header article nav .bot2 {
+              font-size: 14px; } }
         body header article nav .bot1 {
           background: -webkit-gradient(linear, left top, left bottom, from(#ff7a29), color-stop(50%, #ffa044), color-stop(50%, #ff7a29));
           background: -webkit-linear-gradient(top, #ff7a29, #ffa044 50%, #ff7a29 50%);
@@ -201,6 +207,13 @@ body {
           border: solid 1px #ffa800;
           border-radius: 3px;
           color: white; }
+        body header article nav .bot1:hover {
+          background: -webkit-gradient(linear, left bottom, left top, from(#ffa044), color-stop(24%, #ff7a29), to(#fc5f00));
+          background: -webkit-linear-gradient(bottom, #ffa044, #ff7a29 24%, #fc5f00);
+          background: -o-linear-gradient(bottom, #ffa044, #ff7a29 24%, #fc5f00);
+          background: linear-gradient(to top, #ffa044, #ff7a29 24%, #fc5f00);
+          -webkit-box-shadow: 0px 5px 5px #ac1400 inset;
+          box-shadow: 0px 5px 5px #ac1400 inset; }
         body header article nav .bot2 {
           background: -webkit-gradient(linear, left bottom, left top, from(#fff629), color-stop(50%, #efb527), color-stop(50%, #fff629));
           background: -webkit-linear-gradient(bottom, #fff629, #efb527 50%, #fff629 50%);
@@ -210,6 +223,13 @@ body {
           box-shadow: 0px 0px 3px white inset;
           border: solid 1px #ffa800;
           border-radius: 3px; }
+        body header article nav .bot2:hover {
+          background: -webkit-gradient(linear, left bottom, left top, from(#fae49e), color-stop(21%, #fff629), to(#efb527));
+          background: -webkit-linear-gradient(bottom, #fae49e, #fff629 21%, #efb527);
+          background: -o-linear-gradient(bottom, #fae49e, #fff629 21%, #efb527);
+          background: linear-gradient(to top, #fae49e, #fff629 21%, #efb527);
+          -webkit-box-shadow: 0px 3px 5px #f18b27 inset;
+          box-shadow: 0px 3px 5px #f18b27 inset; }
       body header article .visited1 .li1, body header article .visited2 .li2, body header article .visited3 .li3, body header article .visited4 .li4, body header article .visited5 .li5, body header article .visited6 .li6, body header article .visited7 .li7 {
         -webkit-box-shadow: 0px 1px 10px #3f3f3f inset;
         box-shadow: 0px 1px 10px #3f3f3f inset;
@@ -408,8 +428,8 @@ body {
           margin: 0px 15px 28px 0px;
           border: solid 5px white;
           position: relative;
-          -webkit-box-shadow: 0px 5px 15px gray;
-          box-shadow: 0px 5px 15px gray; }
+          -webkit-box-shadow: 0px 2px 10px gray;
+          box-shadow: 0px 2px 10px gray; }
           body main article .mom section:nth-child(3) {
             margin-right: 0px; }
           body main article .mom section:nth-child(6) {
@@ -432,7 +452,8 @@ body {
               transition: all 0.5s;
               color: white;
               text-align: center;
-              line-height: 100px; }
+              line-height: 100px;
+              font-size: 24px; }
             body main article .mom section a::after {
               content: "立即進入";
               position: absolute;
@@ -456,7 +477,8 @@ body {
               -o-transition: all 0.5s;
               transition: all 0.5s;
               opacity: 0;
-              color: white; }
+              color: white;
+              font-size: 17px; }
             body main article .mom section a a:hover:before {
               opacity: 1; }
             body main article .mom section a a:hover:after {
