--- a/css/style.scss
+++ b/css/style.scss
@@ -18,6 +18,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 }
 body {
   line-height: 1;
+  
 }
 ol,ul {
   list-style: none;
@@ -32,6 +33,9 @@ blockquote:before,blockquote:after,q:before,q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+button{
+    font-family: "微軟正黑體";
 }
     /*main*/
 html{
@@ -127,7 +131,7 @@ body {
                     border-bottom: solid 3px transparent;
                     line-height: 77px;
                     color: white;
-                    font-size: 16px;
+                    font-size: 17px;
                     margin: -20px 0px 0px 0px;
                 }
                 a:hover{
@@ -160,15 +164,14 @@ body {
             }
             span{
                 margin: 13px 5px 0px 5px;
-                font-size: 17px;
+                font-size: 16px;
                 color: white;
-                font-weight: 520;
                 &:last-child{
                     margin: 15px 5px 0px 5px;
                     font-size: 14px;
                 }
             }
-            .bot1,.bot2{
+            .bot1, .bot2 {
                 display: block;
                 width: 48px;
                 height: 26px;
@@ -188,19 +191,31 @@ body {
                 @media not all and (min-resolution:.001dpcm){ @supports (-webkit-appearance:none){
                     font-size: 10px;
                 }}
+                /*for FireFox*/
+                @media screen and (min--moz-device-pixel-ratio:0){
+                    font-size: 14px;
+                }
             }
-            .bot1{
+            .bot1 {
                 background: linear-gradient(to bottom,#ff7a29,#ffa044 50%,#ff7a29 50%);
                 box-shadow: 0px 0px 1px white inset;
                 border: solid 1px #ffa800;
                 border-radius: 3px;
                 color: white;
             }
+            .bot1:hover{
+                background: linear-gradient(to top,#ffa044,#ff7a29 24%,#fc5f00);
+                box-shadow: 0px 5px 5px #ac1400 inset;
+            }
             .bot2{
                 background: linear-gradient(to top,#fff629,#efb527 50%,#fff629 50%);
                 box-shadow: 0px 0px 3px white inset;
                 border: solid 1px #ffa800;
                 border-radius: 3px;
+            }
+            .bot2:hover{
+                background: linear-gradient(to top,#fae49e,#fff629 21%,#efb527);
+                box-shadow: 0px 3px 5px #f18b27 inset;
             }
         }
         /*上選單動畫區*/
@@ -420,7 +435,7 @@ body {
                     margin: 0px 15px 28px 0px;
                     border: solid 5px white;
                     position: relative;
-                    box-shadow: 0px 5px 15px gray;
+                    box-shadow: 0px 2px 10px gray;
                     &:nth-child(3){
                         margin-right: 0px;
                     }
@@ -444,6 +459,7 @@ body {
                             color: white;
                             text-align: center;
                             line-height: 100px;
+                            font-size: 24px;
                         }
                         &::after{
                             content:"立即進入";
@@ -461,6 +477,7 @@ body {
                             transition: all 0.5s;
                             opacity: 0;
                             color: white;
+                            font-size: 17px;
                         }
                         a:hover:before{
                             opacity: 1;
